Add a lot of pre-launch files

--- a/web_app/templates/dashboard-get-loans.html
+++ b/web_app/templates/dashboard-get-loans.html
@@ -37,7 +37,7 @@
 
     {{if .ShowBVNField}}
     <div class="form-control">
-      <label for="BVN">What's your BVN?'</label>
+      <label for="BVN">What's your BVN?</label>
       <input id="bvn" name="bvn" type="number" value="" placeholder="Eg: 1234729384" required="true"/>
       <!-- TODO: validate the bvn with regex, bvns are only numbers -->
       {{if .Errors.BVN}}
