--- a/web_app/templates/dashboard-home.html
+++ b/web_app/templates/dashboard-home.html
@@ -31,14 +31,14 @@
 	<a class="button primary" href="/dashboard/savings">Get Started!</a>
       </div>
       
-      <div class="main-left-side-cta-card">
-	<img alt="" src="/static/images/group.png"/>
-	<div class="main-left-side-cta-card-middle">
-	  <h2>Paz Family Vault</h2>
-	  <p>Start saving with your family members today and stand a chance to earn higher returns annually.</p>
-	</div>
-        <a href="/dashboard/savings/family-vault" class="button secondary">Get Started!</a>
-      </div>
+      <!-- <div class="main-left-side-cta-card"> -->
+      <!-- 	<img alt="" src="/static/images/group.png"/> -->
+      <!-- 	<div class="main-left-side-cta-card-middle"> -->
+      <!-- 	  <h2>Paz Family Vault</h2> -->
+      <!-- 	  <p>Start saving with your family members today and stand a chance to earn higher returns annually.</p> -->
+      <!-- 	</div> -->
+      <!--   <a href="/dashboard/savings/family-vault" class="button secondary">Get Started!</a> -->
+      <!-- </div> -->
 
       <div id="recent-activity-container">
         <h2>Recent activity</h2>
