--- a/web_app/templates/dashboard-profile.html
+++ b/web_app/templates/dashboard-profile.html
@@ -6,12 +6,11 @@
   <main>
   <div class="top-container">
     <div class="profile-information-left">
-      <img alt="" src="profile-image"/>
       <h1>{{.Information.FirstName}} {{.Information.LastName}}</h1>
     </div>
-    <div class="progress-container">
-      <div class="progress-bar" style="width: 70%"></div>
-    </div>
+    <!-- <div class="progress-container"> -->
+    <!--   <div class="progress-bar" style="width: 70%"></div> -->
+    <!-- </div> -->
   </div>
 
   <form method="POST" action="/dashboard/profile/">
