--- a/web_app/templates/dashboard-savings.html
+++ b/web_app/templates/dashboard-savings.html
@@ -21,21 +21,21 @@
         <a class="button primary" href="/dashboard/savings/solo-saver">Start now</a>
       </div>
     </div>
-    <div class="savings-plans">
-      <img alt="" src=""/>
-      <div class="savings-plans-right-side">
-        <h2>Paz Family Vault</h2>
-        <p>Save money together with your loved ones and get interest of up to 16% per annum. </p>
-	<a href="/dashboard/savings/family-vault" class="button primary">Start now</a>
-      </div>
-    </div>
-    <div class="savings-plans">
-      <img alt="" src=""/>
-      <div class="savings-plans-right-side">
-        <h2>Paz Target Saver</h2>
-        <p>Save money regularly in a locked plan with interest of up to 12% per annum.</p>
-	<a href="/dashboard/savings/target-savings" class="button primary">Start now</a>
-      </div>
+    <!-- <div class="savings-plans"> -->
+    <!--   <img alt="" src=""/> -->
+    <!--   <div class="savings-plans-right-side"> -->
+    <!--     <h2>Paz Family Vault</h2> -->
+    <!--     <p>Save money together with your loved ones and get interest of up to 16% per annum. </p> -->
+    <!-- 	<a href="/dashboard/savings/family-vault" class="button primary">Start now</a> -->
+    <!--   </div> -->
+    <!-- </div> -->
+    <!-- <div class="savings-plans"> -->
+    <!--   <img alt="" src=""/> -->
+    <!--   <div class="savings-plans-right-side"> -->
+    <!--     <h2>Paz Target Saver</h2> -->
+    <!--     <p>Save money regularly in a locked plan with interest of up to 12% per annum.</p> -->
+    <!-- 	<a href="/dashboard/savings/target-savings" class="button primary">Start now</a> -->
+    <!--   </div> -->
     </div>
   </div>
 </main>
