--- a/web_app/templates/layouts/dashboard-base.html
+++ b/web_app/templates/layouts/dashboard-base.html
@@ -28,11 +28,10 @@
             <li><a class="sidebar-link" href="/dashboard/savings">Savings</a></li>
             <li><a class="sidebar-link" href="/dashboard/loans">Loans</a></li>
             <li><a class="sidebar-link" href="/dashboard/investments">Investments</a></li>
-            <li><a class="sidebar-link" href="/dashboard/thrift">Thrift</a></li>
+            <!-- <li><a class="sidebar-link" href="/dashboard/thrift">Thrift</a></li> -->
+	    <li><a class="sidebar-link" href="/dashboard/logout">Logout</a></li>
           </ul>
 	</nav>
-
-	<p>Logout</p>
       </aside>
 	{{template "main" .}}
     </div>
