--- a/web_app/templates/login.html
+++ b/web_app/templates/login.html
@@ -38,11 +38,11 @@
     </div>
     
     <div class="login-form-vertical-row">
-      <div class="form-control">
-        <input id="remember-me" id="remember-me" name="remember-me" type="checkbox" value=""/>
-        <label for="remember-me">Remember me</label>
-      </div>
-      <a id="forgot-password-link" href="/forgot-password">Forgot Password?</a>
+      <!-- <div class="form-control"> -->
+      <!--   <input id="remember-me" id="remember-me" name="remember-me" type="checkbox" value=""/> -->
+      <!--   <label for="remember-me">Remember me</label> -->
+      <!-- </div> -->
+      <!-- <a id="forgot-password-link" href="/forgot-password">Forgot Password?</a> -->
     </div>
     <input class="primary" role="button" type="submit" value="Log in">
     <a id="create-new-account-link" href="/register">Create a New Account</a>
