--- a/web_app/templates/static/dashboard/family-vault-home.css
+++ b/web_app/templates/static/dashboard/family-vault-home.css
@@ -128,14 +128,14 @@ main h1 {
     margin: 24px 0px;
 }
 
-.modal-heading-container > h2 {
+.modal-heading > h2 {
     color: var(--primary-blue-1);
     text-align: center;
-    margin-bottom: 8px;
+    margin: 16px 0px;
     font-size: 1.4em;
     font-weight: bold;
 }
 
-.modal-heading-container p {
+.modal-heading p {
     text-align: center;
 }
