--- a/web_app/templates/thrift-new.html
+++ b/web_app/templates/thrift-new.html
@@ -54,6 +54,7 @@
         <select id="frequency" name="frequency">
           <option value="">Select option</option>
 	  <option value="daily">Daily</option>
+	  <option value="weekly">Weekly</option>
           <option value="monthly">Monthly</option>
 	  <option value="yearly">Yearly</option>
         </select>
