Add investments form page as a new page after investments index

--- a/web_app/templates/dashboard-investments.html
+++ b/web_app/templates/dashboard-investments.html
@@ -11,8 +11,7 @@
       <div class="investments-info-card">
           <h2>Current Balance</h2>
           <div class="investments-info-card-details">
-		<p>&#8358; 0.00</p>
-		<button>Instant Top up</button>
+		<p>&#8358; {{.Balance}}</p>
 	    </div>
         </div>
       <!-- <div class="investments-info-card"> -->
@@ -26,6 +25,8 @@
       <!--   </div> -->
   </div>
 
+  <a href="/dashboard/investments/form">Fill this form to invest with Paz</a>
+
   <!-- <div class="filter-container"> -->
   <!--     <form action=""> -->
   <!--         <label for="options">Filter</label> -->
@@ -37,31 +38,31 @@
   <!--       </form> -->
   <!--   </div> -->
   
-  <!-- <div class="investments-plans-container"> -->
-  <!--     <div class="investments-plans"> -->
-  <!--         <img alt="" src=""/> -->
-  <!--         <div class="investments-plans-top"> -->
-  <!-- 	      <h2>Nigerian EuroBond Funds</h2> -->
-  <!-- 	      <p>United capital value investments</p> -->
-  <!-- 	    </div> -->
-  <!--         <div class="investments-plans-bottom"> -->
-  <!-- 	      <p>YTD Returns: 0.06%</p> -->
-  <!-- 	      <p>Risk: Moderate</p> -->
-  <!-- 	    </div> -->
-  <!--         <button>Invest now</button> -->
-  <!--       </div> -->
-  <!--     <div class="investments-plans"> -->
-  <!--         <img alt="" src=""/> -->
-  <!--         <div class="investments-plans-top"> -->
-  <!-- 	      <h2>Nigerian EuroBond Funds</h2> -->
-  <!-- 	      <p>United capital value investments</p> -->
-  <!-- 	    </div> -->
-  <!--         <div class="investments-plans-bottom"> -->
-  <!-- 	      <p>YTD Returns: 0.06%</p> -->
-  <!-- 	      <p>Risk: Moderate</p> -->
-  <!-- 	    </div> -->
-  <!--         <button>Invest now</button> -->
-  <!--       </div> -->
-  <!--   </div> -->
+  <div class="investments-plans-container">
+    <!-- <div class="investments-plans"> -->
+    <!--   <img alt="" src=""/> -->
+    <!--   <div class="investments-plans-top"> -->
+    <!-- 	<h2>Nigerian EuroBond Funds</h2> -->
+    <!-- 	<p>United capital value investments</p> -->
+    <!--   </div> -->
+    <!--   <div class="investments-plans-bottom"> -->
+    <!-- 	<p>YTD Returns: 0.06%</p> -->
+    <!-- 	<p>Risk: Moderate</p> -->
+    <!--   </div> -->
+    <!--   <button>Invest now</button> -->
+    <!-- </div> -->
+    <!-- <div class="investments-plans"> -->
+    <!--   <img alt="" src=""/> -->
+    <!--   <div class="investments-plans-top"> -->
+    <!-- 	<h2>Nigerian EuroBond Funds</h2> -->
+    <!-- 	<p>United capital value investments</p> -->
+    <!--   </div> -->
+    <!--   <div class="investments-plans-bottom"> -->
+    <!-- 	<p>YTD Returns: 0.06%</p> -->
+    <!-- 	<p>Risk: Moderate</p> -->
+    <!--   </div> -->
+    <!--   <button>Invest now</button> -->
+      <!-- </div> -->
+  </div>
 </main>
 {{end}}
