Add admin home page

--- a/web_app/templates/admin/base.html
+++ b/web_app/templates/admin/base.html
@@ -12,8 +12,8 @@
     <noscript>Javascript is required to use this application</noscript>
     <!-- TODO: get the meta charset, device width etc -->
   </head>
-  <body id="body">
-    <header>
+  <body id="admin-body">
+    <header id="admin-nav-bar">
       <nav>
 	<ul>
 	  <li>Loans</li>
