Add mobile CSS for pre_auth pages

--- a/web_app/templates/layouts/dashboard-base.html
+++ b/web_app/templates/layouts/dashboard-base.html
@@ -15,7 +15,9 @@
   </head>
   <body id="body">
     <header>
-      <div class="left-side"></div>
+      <div class="left-side">
+	<img id="paz-logo" src="/static/images/images/PAZPryLogoTextInverted 1.png" alt="Paz logo">
+      </div>
       <div class="right-side"></div>
     </header>
     <div id="content-container">
