--- a/web_app/templates/register.html
+++ b/web_app/templates/register.html
@@ -3,19 +3,18 @@
 <link href="/static/css/register.css" rel="stylesheet"/>
 {{end}}
 {{define "aside"}}
-<aside>
   <img id="paz-logo" src="/static/images/images/PAZPryLogoTextInverted 1.png" alt="Paz logo">
   <div id="aside-content">
     <h2>S.L.I.D.E with Paz</h2>
     <p>Tips on becoming financially stable all year round!</p>
     <img alt="background-image" src="/static/images/login-background.png"/>
   </div>
-</aside>
 {{end}}
 {{define "main"}}
-<main id="main">
-  <h1>Create a secure account</h1>
+  <main id="main">
+    <img id="paz-logo-main" src="/static/images/images/PAZPryLogoTextInverted 1.png" alt="Paz logo">
   <form action="/register" method="POST">
+    <h1>Create a secure account</h1>
     {{ .csrfField }}
     <div class="form-control">
       <label for="first-name">First Name</label>
